# IndividualTasks

./: .gitignore  .travis.yml  CMakeLists.txt  MyTask.cpp  MyTask.h  README.md  main.cpp  my_task.cpp  test_gtest.cpp  test_main.cpp
.circleci/: config.yml
Task1/: CMakeLists.txt  MyTask.cpp  MyTask.h  README.md  main.cpp  my_task.cpp  my_task.h  test_gtest.cpp
Task1/tests/: mytestinput.txt
Task2/: CMakeLists.txt  main.c  main.cpp  naive_algorithm.c  naive_algorithm.cpp  naive_algorithm.h  naive_main.cpp  parallel_algorithm.c  parallel_algorithm.cpp  parallel_algorithm.h  parallel_main.cpp  struct.h  test_gtest.cpp
Task2/Test/: input2.txt
Task2/naive_algorithm/: naive_algorithm.cpp  naive_algorithm.h
Task2/parallel_algorithm/: parallel_algorithm.cpp  parallel_algorithm.h
Task2/test/: naive_test.cpp  parallel_test.cpp  test_help_file.cpp  test_help_file.h
ci/travis/: install-linux.sh
tests/: mytestinput.txt  output.txt
